--- a/project/Aboutus.html
+++ b/project/Aboutus.html
@@ -4,15 +4,22 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About Us</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <div>
-			<img src="logo.PNG" alt="brand-logo" width="150" height="110">
-		</div>
+	<img src="logo.PNG" alt="brand-logo" width="150" height="110">
+</div>
 <header>
 		<h1>Welcome to KFC</h1>
 		<nav>
-			<a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
-		</nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="menu.html">Menu</a></li>
+			<li><a href="Nearbylocation.html">NearbyLocation</a></li>
+			<li><a href="register.html">Register</a></li>
+		</ul>
+	</nav>
+	</header>
 <body>
 	Welcome to Devyani International Nepal Pvt. Ltd , the official online store of the world-renowned fast-food chain. Devyani International Nepal Pvt. Ltd. is one of the fastest-growing multinational companies in Nepal, a franchisee of Yum! Restaurant International, brand owner of KFC and Pizza Hut.  As a proud franchisee, we are dedicated to bringing you the signature KFC taste and experience right to your doorstep.
 
@@ -23,8 +30,19 @@ At Devyani International Nepal Pvt. Ltd, we offer a wide range of products that 
 We understand that our customers have busy lives, which is why we have made it our mission to provide a fast, reliable, and hassle-free online ordering experience. With just a few clicks, you can place your order and have it delivered to your doorstep in no time.
 
 We are proud to be part of the KFC family, and we are committed to upholding the brand's values of quality, innovation, and customer satisfaction. Thank you for choosing Devyani International Nepal Pvt. Ltd , and we look forward to serving you soon!
-
-
-
+<footer>
+		<br>
+		<nav>
+			<ul>	
+			<li><a href="Aboutus.html">About Us</a></li>
+			<li><a href="policy.html">Private Policy</a></li>
+			<li><a href="Disclaimer.html">Disclaimer</a></li>
+			<li><a href="Terms.html">Terms and Conditions</a></li>
+			<li><a href="Feedback.html">Feedback</a></li>
+			<li><a href="Faqs.html">FaQs</a></li>
+			</ul>
+		</nav>
+		 <p>&copy; 2024 KFC Nepal. All rights reserved.</p>
+	</footer>
 </body>
 </html>
