--- a/project/Nearbylocation.html
+++ b/project/Nearbylocation.html
@@ -22,10 +22,10 @@
 		</nav>
 		</header>
 		<ul>
-			<li>KFC Bharatpur</li>
+			<li><strong>KFC Bharatpur</strong></li>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1821776.039888228!2d83.05694529711143!3d26.898533354050958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3994fb89807ae35b%3A0x217fad6bbe93d502!2sKFC%20Bharatpur!5e0!3m2!1sen!2sus!4v1733751001781!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		
-		<li>KFC Pokhara</li>
+		<li><strong>KFC Pokhara</strong></li>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1821776.039888228!2d83.05694529711143!3d26.898533354050958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3995951e5c590ec1%3A0x9ecc41d6eb1cab36!2sKFC%20Pokhara!5e0!3m2!1sen!2sus!4v1733757511382!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<footer>
 		<br>
