--- a/project/index.html
+++ b/project/index.html
@@ -32,13 +32,13 @@
 
     <!-- Menu Section -->
     <section id="menu" class="menu">
-        <h2>Our Menu</h2>
+        <h2>Hot Arrivals</h2>
         <div class="menu-items">
             <div class="item">
                 <img src="https://assets.kfc.com.np/storage/uploads/images/product/666b4fc89e12e.webp" alt="Zinger Burger">
                 <h3>Zinger Burger</h3>
                 <p>Spicy, crispy chicken burger.</p>
-                <p>Rs. 350</p>
+                <p>Rs. 350</p></td>
             </div>
             <div class="item">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEZGsyCDlEoQuDLokiYTheR7Yau11sEZQB0g&s" alt="Hot Wings">
@@ -52,6 +52,24 @@
                 <p>Perfect bite-sized chicken.</p>
                 <p>Rs. 400</p>
             </div>
+            <div class="item">
+                <img src="https://assets.kfc.com.np/storage/uploads/images/deal/64882d7b4a6c0.webp">
+                <h3>Veg Rice Bowl with Pepsi</h3>
+                <p>Veg Rice Bowl, Pepsi Regular</p>
+                <p>Rs. 499</p>
+            </div>
+            <div class="item">
+                <img src="https://assets.kfc.com.np/storage/uploads/images/deal/673c5e0a5a013.webp">
+                <h3>Popcorn Rice Box Meal</h3>
+                <p>Popcorn Chicken Rice Bowl,2pc Hot Wings,Pepsi Regular</p>
+                <p>Rs. 649</p>
+            </div>
+            <div class="item">
+                <img src="https://assets.kfc.com.np/storage/uploads/images/product/65a392aee9689.webp">
+                <h3>Supreme Double Chicken Roll</h3>
+                <p>Double spicy Chicken Roll</p>
+                <p>Rs. 429</p>
+            </div>
         </div>
     </section>
 
@@ -63,9 +81,9 @@
 		</div>  <!-- Contact Section -->
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
-        <p>📞 Call us: +977-123456789</p>
-        <p>📍 Visit us: Durbar Marg, Kathmandu</p>
-        <p>📧 Email: support@kfcnepal.com</p>
+        <p>📞 Call us: +977-9805446836</p>
+        <p>📍 Visit us: Bharatpur-16, Chitwan</p>
+        <p>📧 Email: support@kfcbharatpur.com</p>
     </section>
 
 	<footer>
