--- a/project/menu.html
+++ b/project/menu.html
@@ -43,6 +43,18 @@
                 <p>More chicken in combo for family</p>
                 <p>Rs. 3499</p>
             </div>
+              <div class="item">
+                <img src="https://assets.kfc.com.np/storage/uploads/images/deal/666b543b1b630.webp">
+                <h3>Ultimate Duo Meal</h3>
+                <p>American Classic Zinger, Medium Chicken Popcorn,Pepsi Regular,Hot & Crispy 2pcs</p>
+                <p>Rs. 1599</p>
+            </div>
+              <div class="item">
+                <img src="https://assets.kfc.com.np/storage/uploads/images/deal/6462082381436.webp">
+                <h3>Single Chicken Roll Meal</h3>
+                <p>Classic Chicken Roll,Regular Fries</p>
+                <p>Rs. 549</p>
+            </div>
         </div>
     </section>
 	
