--- a/project/policy.html
+++ b/project/policy.html
@@ -4,16 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Policy</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<div>
-			<img src="logo.PNG" alt="brand-logo" width="150" height="110">
+		<img src="logo.PNG" alt="brand-logo" width="150" height="110">
 		</div>
 	<header>
-		<h1>Welcome to KFC</h1>
+			<h1>Welcome to KFC</h1>
 		<nav>
-			<a href="index.html">Home</a>&nbsp&nbsp&nbsp&nbsp&nbsp
-			<a href="menu.html">Menu</a> &nbsp&nbsp&nbsp&nbsp
-			<a href="Nearbylocation.html">NearbyLocation</a>&nbsp&nbsp &nbsp&nbsp&nbsp
-			<a href="register.html">Register</a>&nbsp&nbsp&nbsp&nbsp
+			<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="menu.html">Menu</a></li>
+			<li><a href="Nearbylocation.html">NearbyLocation</a></li>
+			<li><a href="register.html">Register</a></li>
+			</ul>
 		</nav>
 		</header>
 </head>
@@ -33,5 +36,19 @@ Below you will find answers to several questions regarding Our Privacy Policy.</
 <p> In addition to the Personal Information identified above, Our Web servers automatically identify computers by their IP addresses. Company may use IP addresses to analyze trends, administer the Site/App, track users movement and gather broad demographic information for aggregate use. To emphasize, IP addresses are not linked to Personal Information.</p>
 
 <p>Further, Our Site/App may use technologies such as cookies to provide visitors with tailored information upon each visit. Cookies are a common part of many commercial Websites/App that allow small text files to be sent by a Website, accepted by a Web browser and then placed on your hard drive as recognition for repeat visits to the Site/App. Every time you visit Our Site/App, Our servers, through cookies, pixels and/or GIF files, collect basic technical information such as your domain name, the address of the last URL visited prior to clicking through to the Site/App, and your browser and operating system. You do not need to enable cookies to visit Our Site; however, some parts of the Site and some services may be more difficult or impossible to use if cookies are disabled. To emphasize, cookies are not linked to any Personal Information while on this Site/App. It does not contain your name, address, telephone number, or email address.</p>
+<footer>
+		<br>
+		<nav>
+			<ul>	
+			<li><a href="Aboutus.html">About Us</a></li>
+			<li><a href="policy.html">Private Policy</a></li>
+			<li><a href="Disclaimer.html">Disclaimer</a></li>
+			<li><a href="Terms.html">Terms and Conditions</a></li>
+			<li><a href="Feedback.html">Feedback</a></li>
+			<li><a href="Faqs.html">FaQs</a></li>
+			</ul>
+		</nav>
+		 <p>&copy; 2024 KFC Nepal. All rights reserved.</p>
+	</footer>
 </body>
 </html>
